# trustagents

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
agents/anomaly-detection/: README.md
agents/evidence-analysis/: README.md
agents/verification/: README.md
datasets/: README.md  ceid-schema.json  sample-anomalies.jsonl
docs/: methodology.md  problem-statement.md  public-benefit-and-release-plan.md  threat-model.md
docs/architecture/: codex-handoff-summary.md  enterprise-gap-analysis.md  oracle-registry-asset-audit.md  oracle-service-architecture.md  phased-implementation-plan.md  trustagents-rd-boundary.md  trustsignal-flow-refactor-plan.md  trustsignal-integration-architecture.md
docs/integration/: trustsignal-optional-handoff.md
docs/schemas/: confidence-and-risk.md  oracle-api-contract.md  oracle-decision-schema.md
eval/: benchmarks.md  metrics.md
examples/: oracle-request.json  oracle-response.json
proposal/: budget-and-timeline.md  grant-application.md  project-summary.md
scripts/: render_grant_pdf.py
simulations/: pipeline-model.md  scenarios.md
src/trustagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/fixtures/: source_records.json
tests/integration/: test_api.py  test_connectors.py  test_github_webhook.py  test_receipt_lifecycle.py
tests/regression/: test_regression_cases.py
tests/unit/: test_errors_and_retry.py  test_models_and_fingerprint.py  test_normalizers_and_comparators.py  test_observability_and_compliance_gap.py  (+2 more)
(+36 files in other folders)
