[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustagents"
version = "0.1.0"
description = "Experimental, isolated oracle evaluation service for synthetic compliance evidence R&D"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.3",
  "pydantic>=2.12.5",
  "httpx>=0.28.1",
  "uvicorn>=0.44.0"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
